Rename Utils class and modularize some tests